<resources>
    <string name="app_name">韩哈游</string>
    <string name="server_address">http://aimper.mintshop.com/api/v1/</string>
    <string name="term_alert">提醒</string>
    <string name="term_ok">确认</string>
    <string name="term_cancel">取消</string>
    <string name="term_ready_service">该服务正在准备中。</string>
    <string name="msg_general_error">不要意思，加载失败，请重试。</string>
    <string name="term_skip">直接进入</string>
    <string name="term_strategy_seoul">旅游攻略</string>
    <string name="term_famous_place">旅游景点</string>
    <string name="term_travel_schedule">旅游行程</string>
    <string name="term_shopping_mall">时尚韩国</string>
    <string name="term_map">地图</string>
    <string name="term_subway">地铁</string>
    <string name="term_photolog">微游记</string>
    <string name="term_ticket">"电子兑换券"</string>
    <string name="term_coupon">"优惠券"</string>
    <string name="term_home">首页</string>
    <string name="term_my_page">我的信息</string>
    <string name="term_register_photolog">上传游记</string>
    <string name="term_wishlist">收藏夹</string>
    <string name="term_search">搜索</string>
    <string name="msg_download_map">贴士!\n你可以免费下载\n离线地图哟！</string>
    <string name="term_review_best">好</string>
    <string name="term_review_soso">一般</string>
    <string name="term_review_worst">不怎样</string>
    <string name="term_setting">设定</string>
    <string name="term_my_schedule">我的行程</string>
    <string name="term_my_place">我的地点</string>
    <string name="term_my_ticket_coupon">"已买团购/已收优惠券"</string>
    <string name="term_my_bookmark">书签</string>
    <string name="term_my_order">交易记录</string>
    <string name="term_my_cart">"购物车"</string>
    <string name="term_profile">个人资料</string>
    <string name="term_save">保存</string>
    <string name="term_logout">退出</string>
    <string name="term_sync">同步</string>
    <string name="term_sync_only_wifi">仅在wifi环境下同步</string>
    <string name="term_setting_notification">提醒设置</string>
    <string name="term_about">应用信息</string>
    <string name="term_version_info">版本信息</string>
    <string name="term_rating_app">评价应用</string>
    <string name="term_notice">通知</string>
    <string name="term_current_version">"当前版本 : "</string>
    <string name="term_update">立即更新</string>
    <string name="term_agreement">使用条款</string>
    <string name="term_private_agreement">隐私条款</string>
    <string name="term_gps_info_agreement">位置信息条款</string>
    <string name="term_change_background">更换背景</string>
    <string name="term_change_profile">更换头像</string>
    <string name="term_month">"日游"</string>
    <string name="term_product_info">商品详情</string>
    <string name="term_publish">公开</string>
    <string name="term_insert_title_here">请填写标题</string>
    <string name="term_memo">记录</string>
    <string name="term_change_location">更改定位</string>
    <string name="term_rate">评分</string>
    <string name="term_more_pro_guide">查看专家推荐</string>
    <string name="term_recommend_product">猜你喜欢</string>
    <string name="term_review">点评</string>
    <string name="term_review_more">查看更多点评</string>
    <string name="term_product_more">查看更多商品</string>
    <string name="term_day">Day</string>
    <string name="term_plus">+</string>
    <string name="term_bookmark">标记</string>
    <string name="term_like">赞</string>
    <string name="term_write_review">留下点评</string>
    <string name="term_share">分享</string>
    <string name="term_edit">编辑</string>
    <string name="term_close">关闭</string>
    <string name="term_delete">删除</string>
    <string name="term_delete_all">全部删除</string>
    <string name="term_delete_confirm">删除吗？</string>
    <string name="message_alert_lte_mode">在3G/LTE网络下会消耗流量。确认使用吗？</string>
    <string name="message_alert_allow_notification">"接收韩哈游的推送信息吗？"</string>
    <string name="message_write_review">请留下点评。</string>
    <string name="msg_empty_value">请填写所有空间。</string>
    <string name="term_search_result">搜索结果</string>
    <string name="term_recent_search_word">搜索结果</string>
    <string name="term_place">地点</string>
    <string name="term_product">商品</string>
    <string name="term_popular_recommend_product">热门推荐商品</string>
    <string name="message_search_word_here">请输入搜索词</string>
    <string name="term_more">"更多"</string>
    <string name="term_place_detail_info">地点详情</string>
    <string name="term_address">地址</string>
    <string name="term_phone">联系电话</string>
    <string name="term_homepage">网址</string>
    <string name="term_working_time">营业时间 (开放时间)</string>
    <string name="term_price_info">价格详情</string>
    <string name="term_traffic">交通情报</string>
    <string name="term_description">详情</string>
    <string name="term_all">全部</string>
    <string name="term_recommend_seoul">推荐首尔</string>
    <string name="term_popular_place">景点</string>
    <string name="term_shopping">购物</string>
    <string name="term_restaurant">美食</string>
    <string name="msg_review_success">点评发布成功</string>
    <string name="msg_review_fail">点评发布失败</string>
    <string name="term_login">登录</string>
    <string name="term_join">注册</string>
    <string name="term_email">邮箱</string>
    <string name="term_password">密码</string>
    <string name="term_name">姓名</string>
    <string name="term_password_join">密码</string>
    <string name="term_re_password_join">确认密码</string>
    <string name="term_gender">性别</string>
    <string name="term_gender_male">男</string>
    <string name="term_gender_female">女</string>
    <string name="term_date_of_birth">出生日期</string>
    <string name="term_auto_login">下次自动登录</string>
    <string name="term_find_password">忘记密码</string>
    <string name="msg_not_connect_network">请开启网络后在试</string>
    <string name="msg_agreement">同意使用条款</string>
    <string name="msg_private_agreement">同意隐私条款</string>
    <string name="msg_gps_agreement">同意位置信息条款</string>
    <string name="msg_above_fourteen_agreement">14岁以上。(必选)</string>
    <string name="term_requirement">(必选)</string>
    <string name="msg_date_of_birth">请输入出生日期</string>
    <string name="term_send">发送</string>
    <string name="term_find_start_station">搜索出发站位置</string>
    <string name="msg_please_gps_enable">为了流畅使用，请将位置信息设为‘使用’。</string>
    <string name="msg_find_station">搜索地铁站</string>
    <string name="term_start">起</string>
    <string name="term_finish">终</string>
    <string name="msg_dont_support_outside_seoul">非首尔地区正在准备中。</string>
    <string name="msg_near_by_station">这是最近的地铁站。</string>
    <string name="term_exit_info_title">出口信息</string>
    <string name="map_gps_noUse">为了流畅使用，请将位置信息设为‘使用’。</string>
    <string name="map_gps_Location_fail">定位失败</string>
    <string name="map_subway_start">从这里出发</string>
    <string name="map_subway_end">到这里去</string>
    <string name="msg_is_download_map">现在去下载地图吗？</string>
    <string name="msg_dest_arrived">已到达目的地</string>
    <string name="app_finish">再按一次后退键退出应用。</string>
    <string name="msg_no_search_result">无搜索结果</string>
    <string name="map_navigation_long_distance">走路太远，要不要去坐地铁？</string>
    <string name="msg_map_donwload">正在下载地图，请稍等。</string>
    <string name="term_set_start_station">选为起点</string>
    <string name="term_set_end_station">选为终点</string>
    <string name="term_recommend_travel_schedule">创建推荐行程</string>
    <string name="term_recommend_schedule_compeleted">成功创建推荐行程</string>
    <string name="term_recommend_schedule_save">保存到我的行程</string>
    <string name="term_select_date">选择日期</string>
    <string name="msg_warn_empty_start_date">选择出发日期</string>
    <string name="msg_progress_recommend_schedule">正在创建推荐行程</string>
    <string name="term_another_recommend_schedule">接收其它推荐行程</string>
    <string name="term_generate_new_schedule">重新创建</string>
    <string name="term_compelete">完成</string>
    <string name="msg_recommend_schedule_help">出游不知怎么规划?</string>
    <string name="msg_recommend_schedule_help_1">推荐行程帮你安排最佳线路！</string>
    <string name="msg_recommend_step_1">行程天数和出发日期搞定了吗？</string>
    <string name="msg_recommend_step_2">本次旅游的主题是什么？</string>
    <string name="term_select_start_date">选择出发日期</string>
    <string name="term_select_schedule_day">选择日期</string>
    <string name="term_next">下一步</string>
    <string name="term_warn_limit_7_days">"最长能选7日"</string>
    <string name="term_popular_schedule">按人气排序</string>
    <string name="term_registered_schedule">我上传的行程</string>
    <string name="term_bookmarked_schedule">书签夹的行程</string>
    <string name="msg_save_my_schedule">保存到我的行程？</string>
    <string name="msg_init_recommend_schedule">确定初始化所有设置？</string>
    <string name="term_place_description">地点详情</string>
    <string name="msg_dont_connect_network">连接网络后，您可以继续使用。</string>
    <string name="msg_logout">退出吗？</string>
    <string name="term_top_brand">"[TOP BRAND]"</string>
    <string name="term_trend_korea">时尚韩国</string>
    <string name="term_exhibitions">品牌展销</string>
    <string name="term_price">销售价</string>
    <string name="term_coupon_price">优惠价</string>
    <string name="term_product_coupon">优惠券</string>
    <string name="term_delivery_fee">运费</string>
    <string name="msg_product_price_currency">(销售价可随着汇率变动)</string>
    <string name="term_delivery_some_day">指定配送日期</string>
    <string name="term_product_detail_info">配送信息</string>
    <string name="term_product_detail_review">累计评价</string>
    <string name="term_product_detail_delivery_info">商品参数</string>
    <string name="term_product_detail_delivery_description">- 本购物商城员工将会按照顾客所提交的订单中的 期望收货时间,按时配送到顾客赴韩后所下榻的酒 店,宾馆等、如顾客外出或暂时不在酒店、宾馆时, 则会委托所下榻酒店或宾馆的工作人员转交给顾客。
        \n- 本购物商城会竭尽全力使整个配送流程可以快 速·准确·顺利完成,如因一些不可抗力(如火山爆 发、台风、地震、海啸等)或韩国公休日等情况下, 不能完全按照顾客期望收货时间配送货物时,敬请 谅解。
        \n- 顾客亦可提早在赴韩之前在本购物商城订购商品, 我们会根据顾客所提供的赴韩时间及预计下榻酒店、 宾馆进行配送货物。</string>
    <string name="term_product_detail_refund">退换货明细 </string>
    <string name="term_product_detail_refund_description">- 自顾客收到所订购商品之日起(以签收日期为准)，7日之内提供退换货服务。退换货时仅限于同类产品、同一颜色、同一型号\n
        - 以下情况将不提供退换货服务：\n- 商品外包装(包括附带赠品)发生破损现象，并且影响二次销售时；\n- 商品表面及内部出现使用过的痕迹(包括附带赠品)或者商品本身破损时;\n- 衣物类商品经过洗涤时；
        \n- 商品附件、说明书、保修单、标签等有缺失。若商品有吊牌，吊牌被剪掉或损坏时；</string>
    <string name="term_product_detail_refund_description2">电子商务等相关消费者保护法律中制定的退货 法规优先于卖家制定的退货条件。\n 若购买者是未成年人，\n法定代理人的不同意的话，\n 本人或者法定代理人可以取消购买。</string>
    <string name="term_product_detail_refund_link">详细</string>
    <string name="term_buy">立即购买</string>
    <string name="term_all_rate">"/5.0"</string>
    <string name="term_product_add_cart">商品成功加到购物车。</string>
    <string name="term_product_cart_move">去看购物车</string>
    <string name="term_product_shopping">继续看更多商品</string>
    <string name="term_product_fail_cart">장바구니 담기에 실패하였습니다.\n잠시 후 다시 시도해주세요.</string>
    <string name="term_product_select_option">查看商品点评</string>
    <string name="term_all_tickets">所有电子兑换券</string>
    <string name="term_bought_ticket">已购电子兑换券</string>
    <string name="term_validity_period">有效期</string>
    <string name="term_buy_immediately">立即购买</string>
    <string name="term_validity_condition">使用规则</string>
    <string name="term_refund_condition">退货规则</string>
    <string name="term_where_use_in">使用处</string>
    <string name="term_discount_price">优惠价</string>
    <string name="term_show_location">商家位置</string>
    <string name="term_all_coupons">所有优惠券</string>
    <string name="term_downloaded_coupon">已收优惠券</string>
    <string name="term_used">成功使用</string>
    <string name="term_get_temp_password">接收临时密码</string>
    <string name="term_auth_email">邮箱认证</string>
    <string name="term_re_send">重新发送</string>
    <string name="term_auth">韩哈游认证</string>
    <string name="term_input_auth_number">输入验证码</string>
    <string name="msg_complete_join">注册成功！\n验证邮件已发到邮箱\n确认验证码后，\n请在页面输入验证码</string>
    <string name="msg_help_withdraw">为了注销会员需要进行客服连接。\n请咨询以下客服。</string>
    <string name="msg_help_withdraw_qq">QQ : 2889751559</string>
    <string name="msg_help_withdraw_tel">客服中心电话 : (+82)1899-3577</string>
    <string name="msg_help_withdraw_email">客服中心邮箱 : hanhayou@gsshop.com</string>
    <string name="term_congratulate">韩哈游 恭喜您已注册成功</string>
    <string name="msg_success_join">您可以在韩哈游享受更多的服务了！</string>
</resources>