<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="12dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_review_best"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginLeft="8dp"
            android:background="@drawable/circle_button"
            android:text="@string/term_review_best"
            android:textSize="13sp" />

        <Button
            android:id="@+id/btn_review_soso"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginLeft="8dp"
            android:background="@drawable/circle_button"
            android:text="@string/term_review_soso"
            android:textSize="13sp" />

        <Button
            android:id="@+id/btn_review_worst"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginLeft="8dp"
            android:background="@drawable/circle_button"
            android:text="@string/term_review_worst"
            android:textSize="13sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageview"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="8dp"
        android:background="@color/darker_gray" />

    <EditText
        android:id="@+id/edit_review"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/message_write_review" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/app_button"
        android:text="@string/term_save" />

</LinearLayout>