<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/msg_help_withdraw" />

        <TextView
            android:id="@+id/text_withdraw_qq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:text="@string/msg_help_withdraw_qq"
            android:textColor="@color/appcolor_dark"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/text_withdraw_tel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="phone"
                android:gravity="center"
                android:text="@string/msg_help_withdraw_tel"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_withdraw_eamil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="email"
                android:gravity="center"
                android:text="@string/msg_help_withdraw_email"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>