<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical" >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="8dp" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/term_find_password"
                    android:textColor="@color/appcolor"
                    android:textSize="21sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/term_email" />

                <Button
                    android:id="@+id/btn_get_temp_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/normal_appcolor_select_white"
                    android:text="@string/term_get_temp_password"
                    android:textColor="@color/color_normal_white_select_appcolor" />

                <Button
                    android:id="@+id/btn_cancel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/gray_fill_round_button"
                    android:text="@string/term_cancel"
                    android:textColor="@color/color_gray_select_white" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <com.dabeeo.hangouyou.views.LoginBottomAlertView
        android:id="@+id/alert_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" />

</RelativeLayout>